--- a/RMISWeb/RDL_PaddyPurchaseReport.rdlc
+++ b/RMISWeb/RDL_PaddyPurchaseReport.rdlc
@@ -16,24 +16,8 @@
           <DataField>CustomerName</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
-        <Field Name="Street1">
-          <DataField>Street1</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="Street2">
-          <DataField>Street2</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="Town">
-          <DataField>Town</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="City">
-          <DataField>City</DataField>
-          <rd:TypeName>System.String</rd:TypeName>
-        </Field>
-        <Field Name="District">
-          <DataField>District</DataField>
+        <Field Name="Address">
+          <DataField>Address</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
         <Field Name="PinCode">
@@ -742,7 +726,7 @@
         <Top>0.20486in</Top>
         <Left>0.52792in</Left>
         <Height>4.34375in</Height>
-        <Width>6.71875in</Width>
+        <Width>6.71878in</Width>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -858,7 +842,7 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>=First(Fields!CustomerName.Value, "PaddyPurchaseBillDS")</Value>
+                  <Value>=Fields!CustomerName.Value</Value>
                   <Style>
                     <FontFamily>Castellar</FontFamily>
                     <FontSize>26pt</FontSize>
@@ -897,7 +881,7 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>=First(Fields!Street1.Value, "PaddyPurchaseBillDS")</Value>
+                  <Value>=Fields!Address.Value</Value>
                   <Style>
                     <FontFamily>Centaur</FontFamily>
                     <FontSize>12pt</FontSize>
@@ -907,37 +891,7 @@
                   </Style>
                 </TextRun>
                 <TextRun>
-                  <Value>=Fields!Street2.Value</Value>
-                  <Style>
-                    <FontFamily>Centaur</FontFamily>
-                    <FontSize>12pt</FontSize>
-                    <FontWeight>Bold</FontWeight>
-                    <TextDecoration>Underline</TextDecoration>
-                    <Color>CornflowerBlue</Color>
-                  </Style>
-                </TextRun>
-                <TextRun>
-                  <Value>=Fields!Town.Value</Value>
-                  <Style>
-                    <FontFamily>Centaur</FontFamily>
-                    <FontSize>12pt</FontSize>
-                    <FontWeight>Bold</FontWeight>
-                    <TextDecoration>Underline</TextDecoration>
-                    <Color>CornflowerBlue</Color>
-                  </Style>
-                </TextRun>
-                <TextRun>
-                  <Value>=Fields!City.Value</Value>
-                  <Style>
-                    <FontFamily>Centaur</FontFamily>
-                    <FontSize>12pt</FontSize>
-                    <FontWeight>Bold</FontWeight>
-                    <TextDecoration>Underline</TextDecoration>
-                    <Color>CornflowerBlue</Color>
-                  </Style>
-                </TextRun>
-                <TextRun>
-                  <Value>=Fields!District.Value</Value>
+                  <Value> - </Value>
                   <Style>
                     <FontFamily>Centaur</FontFamily>
                     <FontSize>12pt</FontSize>
